# konfig

./: Cargo.toml
.github/workflows/: lint.yml  test.yml
konfig/: Cargo.toml
konfig-edit/: Cargo.toml
konfig-edit/src/: error.rs  lib.rs  serialization_utils.rs
konfig-edit/src/parser/: error.rs  grammar.pest  imp.rs  insertion_point.rs  mod.rs  path_item.rs
konfig-edit/src/serializer/: components.rs  formatting.rs  mod.rs
konfig-edit/src/value/: conv.rs  from_value.rs  index.rs  merge.rs  mod.rs  path.rs  serde.rs  to_konfig.rs  to_value.rs  value_cell.rs
konfig-macros/: Cargo.toml
konfig-macros/src/: derive_with_docs.rs  konfig.rs  lib.rs
konfig-macros/src/derive_with_docs/: mod.rs  serde_attrs.rs
konfig-ser-docs/: Cargo.toml
konfig-ser-docs/src/: doc_writer.rs  lib.rs
konfig-serde/: Cargo.toml
konfig-serde/src/: de.rs  lib.rs
konfig-serde/src/ser/: doc_format.rs  is_primitive.rs  kv.rs  map_key.rs  mod.rs  seq.rs  serializer.rs  utils.rs
konfig-serde/src/ser_docs/: doc_writer.rs  mod.rs  with_docs.rs
konfig/src/: lib.rs
konfig/tests/: complex_structure.rs  k8s_config.rs  parser.rs  serde.rs  serializer.rs  to_konfig.rs
konfig/tests/data/: doc_parsing.konfig.md  k8s_cfg1.src.yaml
konfig/tests/data/expected/: k8s_cfg1.k.md  k8s_cfg1_doc.konfig.md  k8s_cfg2.konfig.md
konfig/tests/data/expected/doc_chunks/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
src/: de.rs  error.rs  lib.rs  parser.rs  value.rs
src/parser/: ast.rs  error.rs  grammar.pest  imp.rs  insertion_point.rs  mod.rs  path_item.rs  type_name.rs
src/ser/: basic_value.rs  introspector.rs  kv.rs  map_key.rs  mod.rs  seq.rs  serializer.rs  utils.rs
src/value/: conv.rs  from_value.rs  mod.rs  serde.rs  to_value.rs
tests/: complex_structure.rs  k8s_config.rs  parse.rs  parser.rs  serde.rs  serde_basics.rs  serde_roundtrip.rs  serialize_basics.rs
tests/data/: complex_structure.expected.k.md  k8s_cfg2.src.yaml
tests/data/expected/: complex_structure.docs.k.md  complex_structure.k.md  k8s_cfg1.k.md  k8s_cfg2.k.md
