[package]
name = "konfig"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = ["serde"]

serde = [
    "dep:serde",
    "dep:itoa",
    "dep:ryu",
]

test_assertions = []

[dependencies]
serde = { version = "^1.0.100", features = ["derive"], optional = true }
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }
thiserror = "1"
pest_consume = "1.0"
pest = "2.1"

[dev-dependencies]
erased-serde = "0.3"
indoc = "2.0"
serde_yaml = "0.9"
ron = "0.8"
indexmap = { version = "1.9", features = [ "serde-1" ] }
konfig = { path = "./", features = ["test_assertions"] }
