[package]
name = "konfig-edit"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
pest_consume = { workspace = true }
pest = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
serde_json = { workspace = true }
