[package]
name = "konfig-macros"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
konfig-edit = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
