[package]
name = "konfig-serde"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = ["ser-docs"]
ser-docs = ["dep:indexmap"]

[dependencies]
konfig-edit = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }