[package]
name = "konfig"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
exclude = ["/tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = ["serde"]

serde = [
    "konfig-edit/serde",
    "dep:konfig-serde",
]

[dependencies]
konfig-edit = { workspace = true }
konfig-serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
indoc = { workspace = true }
serde_yaml = { workspace = true }
ron = { workspace = true }