[package]
name = "konfig"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
exclude = ["/tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = ["serde", "ser-docs", "macros"]
serde = ["konfig-edit/serde", "dep:konfig-serde"]
ser-docs = ["konfig-serde/ser-docs"]
macros = ["dep:konfig-macros"]

[dependencies]
konfig-edit = { workspace = true }
konfig-serde = { workspace = true, optional = true }
konfig-macros = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
indoc = { workspace = true }
serde_yaml = { workspace = true }
ron = { workspace = true }